# 3-python-package-exercise-prime-order

./: .gitignore  Pipfile  README.md  pyproject.toml
.github/workflows/: build-release.yml  run-tests.yml
examples/: play.py
src/pygamebox/: __init__.py  guess_the_number.py  hangman.py  rock_paper_scissors.py  utils.py  word_scramble.py  wordle.py
src/pygamebox/data/: words.txt
tests/: test_guess_the_number.py  test_hangman.py  test_rock_paper_scissors.py  test_utils.py  test_word_scramble.py  test_wordle.py
