[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "PyGameBox"
description = "A Python package for simple text-based games."
version = "0.0.1"
authors = [
        {name ="Aavishkar Gautam", email ="ag8298@nyu.edu"},
        {name ="Avaneesh Devkota", email ="ad5768@nyu.edu"},
        {name ="Soyuj Jung Basnet", email ="soyuj@nyu.edu"}
    ]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["python","package","games","pygamebox"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]